--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       NODE_ENV: production
       PORT: 5001
-      MONGO_URI: "mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0"
+      MONGO_URI: mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0
       JWT_SECRET: 2J8zqkP7VN6bxzg+Wy7DQZsd3Yx8mF3Bl0kch6HYtFs=
     ports:
       - "3001:5001"
