--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       NODE_ENV: production
       PORT: 5001
       INSTANCE_ID: "Backend-1"
-      MONGO_URI: mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.@cluster0.fo9bl.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0
+      MONGO_URI: mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0
       JWT_SECRET: 2J8zqkP7VN6bxzg+Wy7DQZsd3Yx8mF3Bl0kch6HYtFs=
     networks:
       - app-network
@@ -40,7 +40,7 @@ services:
       NODE_ENV: production
       PORT: 5001
       INSTANCE_ID: "Backend-2"
-      MONGO_URI: mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.@cluster0.fo9bl.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0
+      MONGO_URI: mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0
       JWT_SECRET: 2J8zqkP7VN6bxzg+Wy7DQZsd3Yx8mF3Bl0kch6HYtFs=
     networks:
       - app-network
@@ -55,7 +55,7 @@ services:
       NODE_ENV: production
       PORT: 5001
       INSTANCE_ID: "Backend-3"
-      MONGO_URI: mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.@cluster0.fo9bl.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0
+      MONGO_URI: mongodb+srv://lingyuzhou:VALENTINE7987@cluster0.n6spcdu.mongodb.net/NewsMIS?retryWrites=true&w=majority&appName=Cluster0
       JWT_SECRET: 2J8zqkP7VN6bxzg+Wy7DQZsd3Yx8mF3Bl0kch6HYtFs=
     networks:
       - app-network
